Dashboard: fix word spacing

--- a/emhttp/plugins/dynamix/sheets/DashStats.css
+++ b/emhttp/plugins/dynamix/sheets/DashStats.css
@@ -54,6 +54,7 @@ i#mycase[class^="case-"]{font-size:128px}
 i#mycase[class^="fa "]{font-size:96px}
 a.cpu_close,span.hand{cursor:pointer;z-index:1001}
 a.info{white-space:normal;word-spacing:40px}
+a.info span{word-spacing:normal}
 tr#var0,tr#var1,tr#var2,tr#var3,tr#var4{cursor:alias}
 tr#var1,tr#var4,tr#cpu_chart,.cpu_open{display:none}
 td.none{text-align:center;padding-top:12px}
